--- a/kw-ui/src/main/resources/views/Main.fxml
+++ b/kw-ui/src/main/resources/views/Main.fxml
@@ -7,41 +7,41 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="680.0" prefWidth="980.0" stylesheets="@../styles/Main.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.kw.ui.controllers.MainController">
+<AnchorPane id="AnchorPane" prefHeight="680.0" prefWidth="980.0" styleClass="main" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.kw.ui.controllers.MainController">
    <children>
       <Pane layoutY="140.0" prefHeight="400.0" prefWidth="980.0" styleClass="pane">
          <children>
-            <Label layoutX="14.0" layoutY="108.0" text="Don't Have An Account?" textFill="WHITE">
+            <Label layoutX="46.0" layoutY="108.0" text="Don't Have An Account?" textFill="WHITE">
                <font>
                   <Font size="20.0" />
                </font>
             </Label>
-            <Label layoutX="14.0" layoutY="150.0" minHeight="-Infinity" minWidth="-Infinity" prefWidth="250.0" text="Lorem ipsum vale sudo pide uno dos tres quatro cinco seis greido muy" textFill="WHITE" wrapText="true">
+            <Label layoutX="46.0" layoutY="150.0" minHeight="-Infinity" minWidth="-Infinity" prefWidth="250.0" text="Lorem ipsum vale sudo pide uno dos tres quatro cinco seis greido muy" textFill="WHITE" wrapText="true">
                <font>
                   <Font size="16.0" />
                </font>
             </Label>
-            <Button layoutX="14.0" layoutY="245.0" mnemonicParsing="false" onAction="#launchSignUp" prefHeight="35.0" prefWidth="120.0" styleClass="trans-btn-white-brder" text="Sign Up">
+            <Button layoutX="46.0" layoutY="245.0" mnemonicParsing="false" onAction="#launchSignUp" prefHeight="35.0" prefWidth="120.0" styleClass="trans-btn-white-brder" text="Sign Up">
                <font>
                   <Font size="14.0" />
                </font>
             </Button>
-            <Label layoutX="710.0" layoutY="108.0" text="Have An Account?" textFill="WHITE">
+            <Label layoutX="681.0" layoutY="108.0" text="Have An Account?" textFill="WHITE">
                <font>
                   <Font size="20.0" />
                </font>
             </Label>
-            <Label layoutX="710.0" layoutY="150.0" minHeight="-Infinity" minWidth="-Infinity" prefWidth="250.0" text="Lorem ipsum vale sudo pide uno dos tres quatro cinco seis greido muy" textFill="WHITE" wrapText="true">
+            <Label layoutX="681.0" layoutY="150.0" minHeight="-Infinity" minWidth="-Infinity" prefWidth="250.0" text="Lorem ipsum vale sudo pide uno dos tres quatro cinco seis greido muy" textFill="WHITE" wrapText="true">
                <font>
                   <Font size="16.0" />
                </font>
             </Label>
-            <Button layoutX="710.0" layoutY="245.0" mnemonicParsing="false" onAction="#launchSignIn" prefHeight="35.0" prefWidth="120.0" styleClass="trans-btn-white-brder" text="Sign In">
+            <Button layoutX="681.0" layoutY="245.0" mnemonicParsing="false" onAction="#launchSignIn" prefHeight="35.0" prefWidth="120.0" styleClass="trans-btn-white-brder" text="Sign In">
                <font>
                   <Font size="14.0" />
                </font>
             </Button>
-            <VBox fx:id="vbox" layoutY="-40.0" prefHeight="480.0" prefWidth="480.0" styleClass="white-pane" />
+            <VBox id="vbox" fx:id="vbox" layoutX="21.0" layoutY="-40.0" prefHeight="480.0" prefWidth="480.0" styleClass="white-pane" />
          </children>
       </Pane>
    </children>
