--- a/kw-ui/src/main/resources/views/SignIn.fxml
+++ b/kw-ui/src/main/resources/views/SignIn.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
@@ -7,9 +9,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox id="VBox" alignment="CENTER_LEFT" prefHeight="480.0" prefWidth="480.0" styleClass="white-pane" stylesheets="@../styles/Main.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.kw.ui.controllers.SignInController">
+<VBox id="VBox" alignment="CENTER_LEFT" prefHeight="480.0" prefWidth="480.0" styleClass="white-pane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.kw.ui.controllers.SignInController">
    <children>
-      <Label text="Login" textFill="#f78c7b">
+      <Label text="Sign In" textFill="#f78c7b">
          <font>
             <Font size="20.0" />
          </font>
@@ -17,7 +19,7 @@
             <Insets left="16.0" right="16.0" top="20.0" />
          </VBox.margin>
       </Label>
-      <HBox prefHeight="45.0" prefWidth="200.0" styleClass="tf-box">
+      <HBox alignment="CENTER_LEFT" prefHeight="45.0" prefWidth="200.0" styleClass="tf-box">
          <VBox.margin>
             <Insets left="16.0" right="16.0" top="20.0" />
          </VBox.margin>
@@ -27,6 +29,37 @@
                   <Font size="15.0" />
                </font>
             </TextField>
+            <FontAwesomeIconView glyphName="USER" glyphStyle="-fx-fill:DEDEE4" size="1.5em" />
          </children></HBox>
+      <HBox alignment="CENTER_LEFT" layoutX="26.0" layoutY="263.0" prefHeight="45.0" prefWidth="200.0" styleClass="tf-box">
+         <children>
+            <TextField maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" promptText="Password" styleClass="tf" HBox.hgrow="ALWAYS">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </TextField>
+            <FontAwesomeIconView glyphName="LOCK" glyphStyle="-fx-fill:DEDEE4" size="1.5em" />
+         </children>
+         <VBox.margin>
+            <Insets left="15.0" right="15.0" top="20.0" />
+         </VBox.margin>
+      </HBox>
+      <HBox alignment="CENTER_RIGHT" layoutX="25.0" layoutY="295.0" prefHeight="45.0" prefWidth="200.0">
+         <VBox.margin>
+            <Insets left="15.0" right="15.0" top="20.0" />
+         </VBox.margin>
+         <children>
+            <JFXButton alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" ripplerFill="WHITE" text="Forget Password?" textFill="#979797" HBox.hgrow="ALWAYS">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </JFXButton>
+            <JFXButton prefHeight="39.0" prefWidth="120.0" styleClass="pink-btn" text="Sign In">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </JFXButton>
+         </children>
+      </HBox>
    </children>
 </VBox>
