--- a/kw-ui/src/main/resources/views/Main.fxml
+++ b/kw-ui/src/main/resources/views/Main.fxml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="680.0" prefWidth="980.0" styleClass="main" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.kw.ui.controllers.MainController">
+<AnchorPane id="AnchorPane" prefHeight="680.0" prefWidth="980.0" styleClass="main" stylesheets="@Main.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.kw.ui.controllers.MainController">
    <children>
       <Pane layoutY="140.0" prefHeight="400.0" prefWidth="980.0" styleClass="pane">
          <children>
@@ -21,11 +21,6 @@
                   <Font size="16.0" />
                </font>
             </Label>
-            <Button layoutX="46.0" layoutY="245.0" mnemonicParsing="false" onAction="#launchSignUp" prefHeight="35.0" prefWidth="120.0" styleClass="trans-btn-white-brder" text="Sign Up">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Button>
             <Label layoutX="681.0" layoutY="108.0" text="Have An Account?" textFill="WHITE">
                <font>
                   <Font size="20.0" />
@@ -36,11 +31,16 @@
                   <Font size="16.0" />
                </font>
             </Label>
-            <Button layoutX="681.0" layoutY="245.0" mnemonicParsing="false" onAction="#launchSignIn" prefHeight="35.0" prefWidth="120.0" styleClass="trans-btn-white-brder" text="Sign In">
+            <JFXButton layoutX="46.0" layoutY="246.0" onAction="#launchSignUp" prefHeight="35.0" prefWidth="120.0" styleClass="trans-btn-white-brder" text="Sign Up">
                <font>
                   <Font size="14.0" />
                </font>
-            </Button>
+            </JFXButton>
+            <JFXButton layoutX="681.0" layoutY="245.0" onAction="#launchSignIn" prefHeight="35.0" prefWidth="120.0" styleClass="trans-btn-white-brder" text="Sign In">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </JFXButton>
             <VBox id="vbox" fx:id="vbox" layoutX="21.0" layoutY="-40.0" prefHeight="480.0" prefWidth="480.0" styleClass="white-pane" />
          </children>
       </Pane>
