--- a/kw-ui/src/main/resources/views/LoginMain.fxml
+++ b/kw-ui/src/main/resources/views/LoginMain.fxml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="680.0" prefWidth="980.0" styleClass="main" stylesheets="@Main.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.kw.ui.controllers.MainController">
+<AnchorPane id="AnchorPane" prefHeight="680.0" prefWidth="980.0" styleClass="main" stylesheets="@Main.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.kw.ui.controllers.login.LoginMainController">
    <children>
-      <Pane layoutY="140.0" prefHeight="400.0" prefWidth="980.0" styleClass="pane">
+      <Pane id="pane" fx:id="pane" layoutY="140.0" prefHeight="400.0" prefWidth="980.0" styleClass="pane">
          <children>
             <Label layoutX="46.0" layoutY="108.0" text="Don't Have An Account?" textFill="WHITE">
                <font>
@@ -26,7 +29,7 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <Label layoutX="681.0" layoutY="150.0" minHeight="-Infinity" minWidth="-Infinity" prefWidth="250.0" text="Lorem ipsum vale sudo pide uno dos tres quatro cinco seis greido muy" textFill="WHITE" wrapText="true">
+            <Label layoutX="681.0" layoutY="150.0" minHeight="-Infinity" minWidth="-Infinity" prefWidth="250.0" text="Lorem ipsum val sudo pide uno dos tres quatro cinco seis greido muy" textFill="WHITE" wrapText="true">
                <font>
                   <Font size="16.0" />
                </font>
@@ -41,7 +44,23 @@
                   <Font size="14.0" />
                </font>
             </JFXButton>
-            <VBox id="vbox" fx:id="vbox" layoutX="21.0" layoutY="-40.0" prefHeight="480.0" prefWidth="480.0" styleClass="white-pane" />
+            <FontAwesomeIconView glyphName="CLOSE" glyphStyle="-fx-fill:whitesmoke" layoutX="923.0" layoutY="47.0" onMouseClicked="#closeApp" size="1.5em" textOrigin="CENTER">
+               <effect>
+                  <DropShadow />
+               </effect>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </FontAwesomeIconView>
+            <FontAwesomeIconView glyphName="CLOSE" glyphStyle="-fx-fill:whitesmoke" layoutX="34.0" layoutY="47.0" onMouseClicked="#closeApp" size="1.5em" textOrigin="CENTER">
+               <effect>
+                  <DropShadow />
+               </effect>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </FontAwesomeIconView>
+            <VBox id="vbox" fx:id="vbox" layoutY="-40.0" prefHeight="480.0" prefWidth="480.0" styleClass="white-pane" />
          </children>
       </Pane>
    </children>
