--- a/kw-ui/src/main/resources/views/LoginMain.fxml
+++ b/kw-ui/src/main/resources/views/LoginMain.fxml
@@ -18,7 +18,7 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <Label layoutX="46.0" layoutY="150.0" lineSpacing="2.0" minHeight="-Infinity" minWidth="-Infinity" prefWidth="250.0" text="Request your own personal API Key attached to a username and password to get registered." textFill="WHITE" wrapText="true">
+            <Label layoutX="46.0" layoutY="150.0" lineSpacing="2.0" minHeight="-Infinity" minWidth="-Infinity" prefWidth="250.0" text="Request your own personal API Key to get registered." textFill="WHITE" wrapText="true">
                <font>
                   <Font size="14.0" />
                </font>
@@ -28,12 +28,12 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <Label layoutX="681.0" layoutY="150.0" lineSpacing="2.0" minHeight="-Infinity" minWidth="-Infinity" prefWidth="250.0" text="Sign in with your provided API username and password to gain access to Kash Wave." textFill="WHITE" wrapText="true">
+            <Label layoutX="681.0" layoutY="150.0" lineSpacing="2.0" minHeight="-Infinity" minWidth="-Infinity" prefWidth="250.0" text="Sign in with your provided API Key to gain access to Kash Wave." textFill="WHITE" wrapText="true">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <JFXButton layoutX="46.0" layoutY="272.0" onAction="#launchSignUp" prefHeight="35.0" prefWidth="120.0" styleClass="trans-btn-white-brder" text="Sign Up">
+            <JFXButton layoutX="46.0" layoutY="272.0" onAction="#launchRequestRegister" prefHeight="35.0" prefWidth="120.0" styleClass="trans-btn-white-brder" text="Request">
                <font>
                   <Font size="14.0" />
                </font>
