--- a/kw-ui/src/main/resources/views/RequestRegister.fxml
+++ b/kw-ui/src/main/resources/views/RequestRegister.fxml
@@ -9,9 +9,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox id="VBox" alignment="CENTER_LEFT" prefHeight="480.0" prefWidth="480.0" styleClass="white-pane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.kw.ui.controllers.login.SignUpController">
+<VBox id="VBox" alignment="CENTER_LEFT" prefHeight="480.0" prefWidth="480.0" styleClass="white-pane" stylesheets="@Main.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.kw.ui.controllers.login.RequestRegisterController">
     <children>
-        <Label text="Sign Up" textFill="#f78c7b">
+        <Label text="Request Registration" textFill="#f78c7b">
             <font>
                 <Font size="20.0" />
             </font>
@@ -44,25 +44,12 @@
                 <Insets left="15.0" right="15.0" top="20.0" />
             </VBox.margin>
         </HBox>
-      <HBox alignment="CENTER_RIGHT" layoutX="25.0" layoutY="263.0" prefHeight="45.0" prefWidth="200.0" styleClass="tf-box">
-         <children>
-            <TextField maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" promptText="Password" styleClass="tf" HBox.hgrow="ALWAYS">
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </TextField>
-            <FontAwesomeIconView glyphName="LOCK" glyphStyle="-fx-fill:DEDEE4" size="1.5em" />
-         </children>
-         <VBox.margin>
-            <Insets left="15.0" right="15.0" top="20.0" />
-         </VBox.margin>
-      </HBox>
         <HBox alignment="CENTER_RIGHT" layoutX="25.0" layoutY="295.0" prefHeight="45.0" prefWidth="200.0">
             <VBox.margin>
                 <Insets left="15.0" right="15.0" top="20.0" />
             </VBox.margin>
             <children>
-                <JFXButton prefHeight="39.0" prefWidth="120.0" styleClass="pink-btn" text="Sign Up">
+                <JFXButton prefHeight="39.0" prefWidth="120.0" styleClass="pink-btn" text="Request">
                     <font>
                         <Font size="15.0" />
                     </font>
