--- a/kw-ui/src/main/resources/views/RequestRegister.fxml
+++ b/kw-ui/src/main/resources/views/RequestRegister.fxml
@@ -11,7 +11,7 @@
 
 <VBox id="VBox" alignment="CENTER_LEFT" prefHeight="480.0" prefWidth="480.0" styleClass="white-pane" stylesheets="@Main.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.kw.ui.controllers.login.RequestRegisterController">
     <children>
-        <Label text="Request Registration" textFill="#f78c7b">
+        <Label text="Request Registration" textFill="#58c08e">
             <font>
                 <Font size="20.0" />
             </font>
@@ -49,7 +49,7 @@
                 <Insets left="15.0" right="15.0" top="20.0" />
             </VBox.margin>
             <children>
-                <JFXButton prefHeight="39.0" prefWidth="120.0" styleClass="pink-btn" text="Request">
+                <JFXButton prefHeight="39.0" prefWidth="120.0" styleClass="primary-btn" text="Request">
                     <font>
                         <Font size="15.0" />
                     </font>
