--- a/kw-ui/src/main/resources/views/SignIn.fxml
+++ b/kw-ui/src/main/resources/views/SignIn.fxml
@@ -11,7 +11,7 @@
 
 <VBox id="VBox" alignment="CENTER_LEFT" prefHeight="480.0" prefWidth="480.0" styleClass="white-pane" stylesheets="@Main.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.kw.ui.controllers.login.SignInController">
    <children>
-      <Label text="Sign In" textFill="#f78c7b">
+      <Label text="Sign In" textFill="#58c08e">
          <font>
             <Font size="20.0" />
          </font>
@@ -41,7 +41,7 @@
                   <Font size="15.0" />
                </font>
             </JFXButton>
-            <JFXButton prefHeight="39.0" prefWidth="120.0" styleClass="pink-btn" text="Sign In">
+            <JFXButton prefHeight="39.0" prefWidth="120.0" styleClass="primary-btn" text="Sign In">
                <font>
                   <Font size="15.0" />
                </font>
