--- a/kw-ui/src/main/resources/views/LoginMain.fxml
+++ b/kw-ui/src/main/resources/views/LoginMain.fxml
@@ -18,7 +18,7 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <Label layoutX="46.0" layoutY="150.0" lineSpacing="2.0" minHeight="-Infinity" minWidth="-Infinity" prefWidth="250.0" text="Request your own personal API Key to get registered." textFill="WHITE" wrapText="true">
+            <Label layoutX="46.0" layoutY="150.0" lineSpacing="2.0" minHeight="-Infinity" minWidth="-Infinity" prefWidth="250.0" text="Send a request to get credentials to access Kash Wave." textFill="WHITE" wrapText="true">
                <font>
                   <Font size="14.0" />
                </font>
@@ -28,7 +28,7 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <Label layoutX="681.0" layoutY="150.0" lineSpacing="2.0" minHeight="-Infinity" minWidth="-Infinity" prefWidth="250.0" text="Sign in with your provided API Key to gain access to Kash Wave." textFill="WHITE" wrapText="true">
+            <Label layoutX="681.0" layoutY="150.0" lineSpacing="2.0" minHeight="-Infinity" minWidth="-Infinity" prefWidth="250.0" text="Sign in with your credentials and let Kash Wave grow your account!" textFill="WHITE" wrapText="true">
                <font>
                   <Font size="14.0" />
                </font>
