--- a/kw-ui/src/main/resources/views/SignIn.fxml
+++ b/kw-ui/src/main/resources/views/SignIn.fxml
@@ -4,6 +4,7 @@
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -24,19 +25,32 @@
             <Insets left="16.0" right="16.0" top="20.0" />
          </VBox.margin>
          <children>
-            <TextField maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" promptText="API Key" styleClass="tf" HBox.hgrow="ALWAYS">
+            <TextField maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" promptText="Username" styleClass="tf" HBox.hgrow="ALWAYS">
                <font>
                   <Font size="15.0" />
                </font>
             </TextField>
-            <FontAwesomeIconView glyphName="KEY" glyphStyle="-fx-fill:DEDEE4" size="1.5em" />
+            <FontAwesomeIconView glyphName="USER" glyphStyle="-fx-fill:DEDEE4" size="1.5em" />
          </children></HBox>
+      <HBox alignment="CENTER_LEFT" prefHeight="45.0" prefWidth="200.0" styleClass="tf-box">
+         <children>
+            <PasswordField maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" promptText="Password" styleClass="tf" HBox.hgrow="ALWAYS">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </PasswordField>
+            <FontAwesomeIconView glyphName="LOCK" glyphStyle="-fx-fill:DEDEE4" size="1.5em" />
+         </children>
+         <VBox.margin>
+            <Insets left="16.0" right="16.0" top="20.0" />
+         </VBox.margin>
+      </HBox>
       <HBox alignment="CENTER_RIGHT" layoutX="25.0" layoutY="295.0" prefHeight="45.0" prefWidth="200.0">
          <VBox.margin>
             <Insets left="15.0" right="15.0" top="20.0" />
          </VBox.margin>
          <children>
-            <JFXButton alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" ripplerFill="WHITE" text="Lost API Key?" textFill="#979797" HBox.hgrow="ALWAYS">
+            <JFXButton alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" ripplerFill="WHITE" text="Forgot Password?" textFill="#979797" HBox.hgrow="ALWAYS">
                <font>
                   <Font size="15.0" />
                </font>
