--- a/kw-ui/src/main/resources/views/Onboarding.fxml
+++ b/kw-ui/src/main/resources/views/Onboarding.fxml
@@ -5,6 +5,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -22,27 +23,49 @@
                   </Label>
                </children>
             </VBox>
-            <VBox alignment="CENTER_LEFT" layoutX="300.0" prefHeight="420.0" prefWidth="300.0" styleClass="white-pane">
+            <VBox layoutX="300.0" prefHeight="420.0" prefWidth="300.0" styleClass="white-pane">
                <children>
-                  <Label text="Welcome" textFill="#58c08e">
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                  </Label>
-                  <JFXButton onAction="#getStartedPressed" styleClass="primary-btn" text="Get Started">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
+                  <HBox alignment="TOP_RIGHT" prefHeight="100.0" prefWidth="280.0">
+                     <children>
+                        <FontAwesomeIconView fill="#58c08e" glyphName="MINUS" onMouseClicked="#minimizeApp" size="1.5em">
+                           <HBox.margin>
+                              <Insets right="16.0" />
+                           </HBox.margin>
+                        </FontAwesomeIconView>
+                        <FontAwesomeIconView fill="#58c08e" glyphName="CLOSE" layoutX="255.0" layoutY="27.0" onMouseClicked="#closeApp" size="1.5em" />
+                     </children>
                      <VBox.margin>
-                        <Insets top="20.0" />
+                        <Insets right="20.0" top="20.0" />
                      </VBox.margin>
-                  </JFXButton>
+                  </HBox>
+                  <VBox prefHeight="169.0" prefWidth="280.0" VBox.vgrow="ALWAYS">
+                     <children>
+                        <Label text="Welcome" textFill="#58c08e">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets top="16.0" />
+                           </VBox.margin>
+                        </Label>
+                        <JFXButton onAction="#getStartedPressed" styleClass="primary-btn" text="Get Started">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets top="16.0" />
+                           </VBox.margin>
+                        </JFXButton>
+                     </children>
+                     <padding>
+                        <Insets top="40.0" />
+                     </padding>
+                  </VBox>
                </children>
                <padding>
                   <Insets left="20.0" />
                </padding>
             </VBox>
-            <FontAwesomeIconView fill="#58c08e" glyphName="CLOSE" layoutX="560.0" layoutY="40.0" onMouseClicked="#closeApp" size="1.5em" />
             <Pane layoutX="297.0" layoutY="24.0" maxWidth="66.0" minWidth="0.0" prefHeight="374.0" prefWidth="33.0" styleClass="v-bar-5" />
          </children>
       </Pane>
